# enchudb

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GROWABLE_MMAP_PLAN.md  LICENSE-APACHE  LICENSE-MIT  MOLIBOOK_TEST_PLAN.md  README.md  TEST_DESIGN.md  V28_PLAN.md  V29_PLAN.md  V32_PLAN.md  issue.md
benches/: README.md  core.rs
crates/enchu-extend/: .gitignore  BENCH_RESULTS.md  Cargo.toml  EXTEND_OPTIMIZE_PLAN.md  PLAN_ORM_AUTOSCHEMA.md  README.md  article_draft.md  bench.Dockerfile  bench_1m.ts  bench_1m_vs_pg.ts  bench_extend.ts  bench_extend_fair.ts  bench_extend_full.ts  bench_fair.ts  bench_filter.ts  bench_full.ts  bench_load_test.ts  bench_real.ts  bench_specs.ts  bench_t5ug3.ts  bench_vs_elasticsearch.ts  bench_vs_meilisearch.ts  example.ts  index.d.ts  native.js  package-lock.json  package.json  test_autoschema.ts  test_client.ts  test_extend.ts  test_pg_compat.ts  test_v18.ts  test_v20.ts  tsconfig.json
crates/enchu-extend/bench/: Cargo.toml  bench_vs_meilisearch.rs
crates/enchu-extend/src/: client.ts  index.ts  lib.rs
crates/enchu-extend/src/engine/: cas.rs  column.rs  cylinder.rs  cylinder_v27.rs  engine.rs  entity_set.rs  himo_store.rs  mod.rs  vocabulary.rs
crates/enchudb-cli/: Cargo.toml  LICENSE.md
crates/enchudb-cli/src/: main.rs
crates/enchudb-cli/tests/: cli_smoke.rs
crates/enchudb-engine/: Cargo.toml  README.md
crates/enchudb-engine/examples/: battle_vs_duckdb.rs  issue88_footprint.rs  issue92_dirty_footprint.rs  local_ns_bench.rs  undo_overflow_repro.rs
crates/enchudb-engine/src/: acl.rs  append_bucket.rs  append_vec.rs  blob_store.rs  cas.rs  changefeed.rs  column.rs  content_store.rs  cylinder.rs  cylinder_v27.rs  eid_translator.rs  engine.rs  entity_set.rs  growable_map.rs  himo_store.rs  hlc_store.rs  leaf_store.rs  lib.rs  lockfree_cylinder.rs  positions_region.rs  positions_sidecar.rs  query_lang.rs  ravn.rs  region.rs  sync.rs  table_column_store.rs  transport.rs  undo.rs  vocabulary.rs  wal.rs  write_queue.rs  ws_transport.rs
crates/enchudb-engine/tests/: audit_table_id.rs  corrupt_header_open.rs  create_no_clobber.rs  destructive_0_7_0.rs  dirty_range_msync.rs  drop_table.rs  eid_offset_descending.rs  eids_par_aggregations.rs  engine_model_proptest.rs  flush_writes_barrier.rs  issue101_clean_reopen.rs  issue106_leaf_cross_process.rs  issue106_leaf_torn_read.rs  issue47_remote_tie_next_local.rs  issue52_fail_readable.rs  issue54_vocab_orphan.rs  issue7_add_himo_after_reopen.rs  issue88_migration.rs  issue90_leaf_scale.rs  issue92_dirty_index_full_commit.rs  issue95_lockfree_read.rs  issue95_stress.rs  loom_append_publish.rs  oplog_recovery_fault.rs  phase1_auto_transfer.rs  phase4_ring_buffer.rs  phase4_sync_ops.rs  phase5_initial_sync.rs  positions_sidecar_compat.rs  query_by_id_peer_prefix.rs  queue_backpressure.rs  range_min_max_histogram.rs  range_par.rs  recover_short_lived_cli.rs  req12_bucket_local_meta.rs  sns_scale_stress.rs  table_api.rs  undo_overflow.rs  v4_compat_open.rs
crates/enchudb-ffi/: Cargo.toml  README.md
crates/enchudb-ffi/examples/: demo.c
crates/enchudb-ffi/include/: enchudb.h
crates/enchudb-ffi/src/: lib.rs
crates/enchudb-ngram/: Cargo.toml  README.md
crates/enchudb-ngram/src/: bigram.rs  index.rs  lib.rs  posting.rs  storage.rs
crates/enchudb-oplog/: Cargo.toml
crates/enchudb-oplog/src/: lib.rs  oplog.rs
crates/enchudb-oplog/tests/: truncated_oplog.rs
crates/enchudb-rag/: Cargo.toml  README.md
crates/enchudb-rag/examples/: basic.rs  benchmark.rs  hybrid.rs  rag_compare.rs
crates/enchudb-rag/src/: bm25.rs  chunk.rs  chunker.rs  distance.rs  embedder.rs  filter.rs  lib.rs  query.rs  rerank.rs  store.rs
crates/enchudb-rag/tests/: basic.rs  fastembed_integration.rs
crates/enchudb-schema/: Cargo.toml  README.md
crates/enchudb-schema/examples/: schema_overhead_bench.rs  scope_demo.rs  tenant_view_demo.rs  view_demo.rs
crates/enchudb-schema/src/: lib.rs
crates/enchudb-schema/tests/: aggregations_min_max_histogram.rs  cold_open_coalesce.rs  engine_built_db_open.rs  group_cardinality.rs  issue109_create_growable_with_leaf.rs  issue47_entity_in_reissue.rs  issue50_build_idempotent.rs  issue52_fail_readable.rs  issue61_name_validation.rs  issue73_add_column_paths.rs  query_aggregations.rs  scope.rs  tenant_view.rs  view.rs
crates/enchudb-sql/: Cargo.toml  README.md
crates/enchudb-sql/src/: lib.rs
crates/enchudb-sync/: Cargo.toml
crates/enchudb-sync/src/: lib.rs  shard.rs  subscription.rs  sync.rs
crates/enchudb-sync/tests/: issue9_destructive.rs  issue9_foreign_eid_collision.rs  phase2_sync_ops_publish.rs  vocab_dedupe.rs  writeback_reverse_eidmap.rs
crates/enchudb-text/: Cargo.toml  README.md
crates/enchudb-text/src/: engine.rs  lib.rs  posting.rs  storage.rs
crates/enchudb-textsearch/: Cargo.toml  README.md
crates/enchudb-textsearch/src/: lib.rs
crates/enchudb-transport/: Cargo.toml
crates/enchudb-transport/examples/: dist_dashboard.rs
crates/enchudb-transport/src/: http.rs  lib.rs  ws.rs
crates/enchudb-wal/: Cargo.toml
crates/enchudb-wal/src/: lib.rs  wal.rs
docs/: architecture.md  distributed.md  glossary.md  ravn_migration.md
examples/: agentic_workload_bench.rs  batch_read_under_rebuild.rs  blob_bench.rs  cas_experiment.rs  column_read_bench.rs  combo_experiment.rs  dedup_experiment.rs  delta_sync_experiment.rs  dist_dashboard.rs  dump.rs  group_sum_cap_probe.rs  growable_rss_repro.rs  hybrid_experiment.rs  lockfree_bucket_probe.rs  lockfree_engine_bench.rs  multi_cond_scaling.rs  open_profile.rs  pair_table_bench.rs  par_scan_bench.rs  reopen_eager_rebuild_bench.rs  sync_centralized.rs  sync_local_first.rs  sync_per_user.rs  unified_delta_experiment.rs  v26_bench.rs  v26_cas_test.rs  v26_destruction_test.rs  v26_full_test.rs  v26_integrated_bench.rs  v26_many_conds.rs  v26_real_bench.rs  v26_update_profile.rs  v26_write_bench.rs  v27_bench.rs  v27_concurrent_bench.rs  v27_vs_v31_bench.rs  v27_vs_v31_full.rs  v28_wal_bench.rs  v33_vs_pairs.rs  verify_tax_probe.rs  (+8 more)
lp/: index.html
src/: acl.rs  blob_store.rs  changefeed.rs  crdt.rs  (+22 more)
(+35 files in other folders)
