[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "enchudb"
version = "0.1.0"
edition = "2024"
description = "EnchuDB — 紐ベース円柱エンジン。prefix sum O(1)。全mmap。"
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[features]
v26 = []
v27 = ["dep:crossbeam-queue"]
v32 = ["v27", "dep:ed25519-dalek", "dep:rand_core"]
# v33: Engine::open/create を Arc<Self>+WAL 返しに統合、mutation API を &self に、
# text / ref / himo 定義を WAL 経由 sync 対象に。v32 は並存したまま(default では無効)。
v33 = ["v32"]

[dependencies]
crossbeam-queue = { version = "0.3", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"

[dev-dependencies]
proptest = "1"
rusqlite = { version = "0.36", features = ["bundled"] }
enchudb-transport = { path = "crates/enchudb-transport" }
sabitori = { path = "../sabitori/crates/sabitori" }
sabitori-style = { path = "../sabitori/crates/sabitori-style" }
sabitori-core = { path = "../sabitori/crates/sabitori-core" }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "core"
harness = false
required-features = ["v32"]

