[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "enchudb"
version = "0.1.0"
edition = "2024"
description = "EnchuDB — 紐ベース円柱エンジン。`enchudb-engine` を便利に再エクスポートする meta crate。"
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[features]
default = []
v26 = ["enchudb-engine/v26"]
v27 = ["enchudb-engine/v27"]
v32 = ["enchudb-engine/v32", "dep:enchudb-sync"]
v33 = ["enchudb-engine/v33", "dep:enchudb-sync", "enchudb-sync/v33"]

[dependencies]
enchudb-engine = { path = "crates/enchudb-engine" }
enchudb-sync = { path = "crates/enchudb-sync", optional = true }

[dev-dependencies]
proptest = "1"
rusqlite = { version = "0.36", features = ["bundled"] }
enchudb-transport = { path = "crates/enchudb-transport" }
sabitori = { path = "../sabitori/crates/sabitori" }
sabitori-style = { path = "../sabitori/crates/sabitori-style" }
sabitori-core = { path = "../sabitori/crates/sabitori-core" }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "core"
harness = false
required-features = ["v32"]
