[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "enchudb"
version = "0.8.7"
edition = "2024"
description = "EnchuDB — 紐ベース円柱エンジン。`enchudb-engine` を便利に再エクスポートする meta crate。"
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[features]
sql = ["dep:enchudb-sql"]
ffi = ["dep:enchudb-ffi", "sql"]
async-blob = ["enchudb-engine/async-blob"]

[dependencies]
enchudb-oplog = { path = "crates/enchudb-oplog" }
enchudb-engine = { path = "crates/enchudb-engine" }
enchudb-sync = { path = "crates/enchudb-sync" }

# native 専用 (disk-backed schema 永続化 / C ABI / SQL frontend は wasm に意味なし)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
enchudb-schema = { path = "crates/enchudb-schema" }
enchudb-sql = { path = "crates/enchudb-sql", optional = true }
enchudb-ffi = { path = "crates/enchudb-ffi", optional = true }

[dev-dependencies]
proptest = "1"
libc = "0.2"
rusqlite = { version = "0.36", features = ["bundled"] }
# in-process DuckDB binding for vs_db bench (= subprocess CLI overhead を排除して
# columnar OLAP の真の比較を取る)。 bundled で system に依存しない build。
duckdb = { version = "1", features = ["bundled"] }
enchudb-transport = { path = "crates/enchudb-transport" }
sabitori = { path = "../sabitori/crates/sabitori" }
sabitori-style = { path = "../sabitori/crates/sabitori-style" }
sabitori-core = { path = "../sabitori/crates/sabitori-core" }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "core"
harness = false
