[package]
name = "enchudb-cli"
version = "0.8.10"
edition = "2024"
description = "EnchuDB CLI — sqlite3 風 REPL で engine を直接叩く。 query_lang 構文 (`age:30 | count` 等) と dot command (`.himos`, `.dump`) のみ、 SQL を経由しない。"
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[[bin]]
name = "enchu"
path = "src/main.rs"

[dependencies]
enchudb-engine = { path = "../enchudb-engine" }
enchudb-oplog = { path = "../enchudb-oplog" }
