[package]
name = "enchudb-engine"
version = "0.13.0"
edition = "2024"
description = "EnchuDB engine — 紐ベース円柱エンジン本体。WAL / BlobStore / HLC primitive / keys / ACL まで含む、単独 DB として動く層。"
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[features]
# AsyncBlobStore trait + tokio-based default adapter。
# S3 / HTTP / 遠隔ストア向け。引かない限り tokio / async-trait は依存に入らない。
async-blob = ["dep:async-trait", "dep:tokio"]

[lints.rust]
# loom model test (tests/loom_append_publish.rs) は `--cfg loom` で有効化する。
# check-cfg に登録して unexpected_cfgs 警告を抑止。
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
enchudb-oplog = { path = "../enchudb-oplog" }
crossbeam-queue = "0.3"
# #95: lock-free read の realloc 遅延解放 (epoch-based reclamation)
crossbeam-epoch = "0.9"
# #95: HimoStore write_lock 用。 critical section が ~100ns なので、 競合で即
# カーネル休眠する std::sync::Mutex (psynch) でなく adaptive spin する Mutex が要る
# (sunsu matrix の 4-thread schema commit で実測 ~40% 差)。 依存ツリーに既存。
parking_lot = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
libc = "0.2"
# 0.8.9 (#39): bulk column scan の並列化。 native でのみ有効
# (wasm は単 thread なので意味なし)。
rayon = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# std::time panics on wasm32-unknown-unknown ("time not implemented"); web-time
# shims Instant/SystemTime for the browser.
web-time = "1"

[dev-dependencies]
# model-based property test (engine op 列 vs 参照 oracle、#95 の stale/verify 網羅)
proptest = "1"
# loom: AppendBucket publish protocol の全 interleaving model check（#95）。
# `--cfg loom` の時だけ使う（tests/loom_append_publish.rs は #![cfg(loom)] gate）。
loom = "0.7"
