[package]
name = "enchudb-ffi"
version = "0.8.1"
edition = "2024"
description = "EnchuDB C ABI — 全言語から叩けるよう SQLite 風の C 関数を露出する凍結 layer。cdylib / staticlib ビルド対応。"
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
enchudb-sql = { path = "../enchudb-sql" }
