[package]
name = "enchudb-ngram"
version = "0.13.1"
edition = "2021"
description = "bigram 転置インデックスの index プリミティブ。bigram 抽出 / posting / intersect → 候補 doc id。検索意味論は持たない（substring 等のポリシーは enchudb-textsearch）。native は mmap、wasm は from_bytes 経由で起動。"
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
