[package]
name = "enchudb-oplog"
version = "0.10.0"
edition = "2024"
description = "EnchuDB oplog — append-only operation log, HLC, peer keys. Wire-level primitives shared by engine / sync / transport."
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
libc = "0.2"
