[package]
name = "enchudb-sql"
version = "0.1.0"
edition = "2024"
description = "EnchuDB SQL frontend — sqlparser でパースして engine メソッドに直 dispatch する薄い syntactic sugar 層。SQLite の上位互換 (superset) を狙う。"
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[dependencies]
enchudb-engine = { path = "../enchudb-engine" }
sqlparser = "0.52"
