[package]
name = "enchudb-sql"
version = "0.2.7"
edition = "2024"
description = "EnchuDB SQL frontend — sqlparser でパースして engine メソッドに直 dispatch する薄い syntactic sugar 層。SQLite の上位互換 (superset) を狙う。"
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[dependencies]
enchudb-wal = { path = "../enchudb-wal" }
enchudb-engine = { path = "../enchudb-engine" }
enchudb-schema = { path = "../enchudb-schema" }
sqlparser = "0.52"
