[package]
name = "enchudb-sync"
version = "0.2.3"
edition = "2024"
description = "EnchuDB p2p sync — HLC-LWW Syncer。`enchudb-engine` に積む層。"
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[dependencies]
enchudb-wal = { path = "../enchudb-wal" }
enchudb-engine = { path = "../enchudb-engine" }
