[package]
name = "enchudb-sync"
version = "0.8.15"
edition = "2024"
description = "EnchuDB p2p sync — HLC-LWW Syncer。`enchudb-engine` に積む層。"
license-file = "LICENSE.md"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[dependencies]
enchudb-oplog = { path = "../enchudb-oplog" }
enchudb-engine = { path = "../enchudb-engine" }
