[package]
name = "enchudb-text"
version = "0.3.0"
edition = "2021"
description = "bigram 転置インデックスによる全文検索エンジン。native は mmap、wasm は from_bytes 経由で起動。"
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
