[package]
name = "enchudb-wal"
version = "0.2.4"
edition = "2024"
description = "EnchuDB WAL — append-only operation log, HLC, peer keys. Wire-level primitives shared by engine / sync / transport."
license = "MIT OR Apache-2.0"
authors = ["mutafika"]
repository = "https://github.com/mutafika/enchudb"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
libc = "0.2"
