[package]
name = "enchu-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench_vs_meilisearch"
path = "bench_vs_meilisearch.rs"

[dependencies]
enchu-v15 = { path = "../../enchu-v15", default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
